Решена проблема с MPA